# neuronswquarks

./: README.md  meta.json
quark_sim/: .gitignore  Cargo.toml  PRODUCTION_CONFIG.md  README.md  build.rs  compare_runs.py
quark_sim/.github/workflows/: ci.yml
quark_sim/analysis/: requirements.txt
quark_sim/analysis/hepdata/: download.py  parse.py  schemas.py
quark_sim/analysis/tests/: test_uncertainty.py  test_validation.py
quark_sim/analysis/validation/: binning.py  cache.py  chi_square.py  compare.py  compare_uncertainty.py  covariance.py  uncertainty.py
quark_sim/data/cache/: apfel_predictions_cache.json
quark_sim/docker/: Dockerfile  build.sh  run.sh
quark_sim/docs/: chi_square_method.md  dis_kinematics.md  hepdata_sources.md  hepmc3_event_format.md  hera_validation.md  lhapdf_integration.md  lo_dis_cross_section.md  pythia8_dis_generation.md  reproducibility.md  scientific_scope_and_limitations.md  theory_uncertainties.md
quark_sim/models/surrogate_v1/: model.safetensors  model_config.json
quark_sim/outputs/20251203_025129_GMT/: session.json
quark_sim/outputs/20251203_035245_GMT/: session.json  trained_model.safetensors
quark_sim/outputs/20251203_042707_GMT/: session.json  trained_model.safetensors
quark_sim/outputs/20251203_050024_GMT/: session.json  trained_model.safetensors
quark_sim/outputs/20251203_123953_GMT/: session.json  trained_model.safetensors  trained_model_config.json
quark_sim/physics-engine/: CMakeLists.txt
quark_sim/physics-engine/include/: apfel_backend.hpp  pythia_dis_generator.hpp
quark_sim/physics-engine/src/: apfel_backend.cpp  apfel_cli.cpp  pythia_dis_cli.cpp  pythia_dis_generator.cpp
quark_sim/physics-engine/tests/: apfel_backend_test.cpp
quark_sim/scripts/: apfelxx_env.sh  lhapdf_env.sh  pythia_env.sh  setup_all_wsl.sh  setup_apfelxx_wsl.sh  setup_hepmc3_wsl.sh  setup_lhapdf_wsl.sh  setup_pythia8_wsl.sh
quark_sim/src/: gui.rs  lib.rs  main.rs  model.rs  physics.rs  plotting.rs  scattering.rs  structure_function_cli.rs  training.rs  validation_artifacts.rs
quark_sim/src/gui/: dis_config_page.rs  dis_event_gen_page.rs  dis_event_viewer_page.rs  dis_inclusive_page.rs  dis_run_history_page.rs  dis_validation_page.rs  legacy_cornell.rs  mod.rs  state.rs  tests.rs  theme.rs  worker.rs
quark_sim/src/physics/: apfel.rs  constants.rs  cross_section.rs  dis_kinematics.rs  four_vector.rs  legacy_cornell.rs  mod.rs  pdf.rs  structure_function_provider.rs  structure_function_validation.rs  structure_functions.rs  surrogate.rs  surrogate_training.rs
quark_sim/tests/: dis_cli.rs  dis_kinematics.rs  lhapdf_integration.rs  pythia_integration_tests.rs  regression_tests.rs  validation_module_harness.rs
quark_sim/tests/fixtures/: apfel_nlo.json
